--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author"            :   "Daniel Garnier <daniel@garnier.wf>",
     "dependencies"      :   {
                                 "react"         :   "^0.13.0",
+                                "jquery"        :   "^2.1.4",
                                 "moment"        :   "^2.10.6",
                                 "d3"            :   "^3.5.6",
                                 "flux"          :   "^2.0.3",
@@ -20,7 +21,8 @@
                                 "nodemon"       :   "^1.4.1",
                                 "bootstrap"     :   "^3.3.5",
                                 "ncp"           :   "^2.0.0",
-                                "mkdirp"        :   "^0.5.1"
+                                "mkdirp"        :   "^0.5.1",
+                                "uglify-js"     :   "^2.4.24"
                             },
     "browserify"        :   {
                                 "transform" :   [
@@ -29,12 +31,19 @@
                             },
     "main"              :   "src/app.js",
     "scripts"           :   {
+                                "build"         :   "npm run bootstrap & npm run build-less & npm run build-js",
                                 "start"         :   "npm run bootstrap & npm run watch",
                                 "watch"         :   "npm run watch-js & npm run watch-css",
+
                                 "watchit"       :   "watchify -vdo dist/bundle.js .",
-                                "watch-js"      :   "nodemon --watch src --ext js,jsx --exec \"browserify -vdo dist/bundle.js .\"",
+
+                                "watch-js"      :   "nodemon --watch src --ext js,jsx --exec \"npm run build-js-d\"",
+                                "build-js-d"    :   "browserify -vdo dist/bundle.js .",
+                                "build-js"      :   "browserify src/app.js | uglifyjs > dist/bundle.js",
+
                                 "watch-css"     :   "nodemon --watch style --ext less --exec \"npm run build-less\"",
                                 "build-less"    :   "lessc style/main.less dist/bundle.css",
+
                                 "bootstrap"     :   "npm run mkdir-bs & npm run copy-bs-css & npm run copy-bs-js & npm run copy-bs-fonts",
                                 "mkdir-bs"      :   "mkdirp dist/bootstrap/css dist/bootstrap/js dist/bootstrap/fonts",
                                 "copy-bs-css"   :   "ncp node_modules/bootstrap/dist/css/ dist/bootstrap/css",
