--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
                                 "flux"          :   "^2.0.3",
                                 "events"        :   "^1.0.2",
                                 "object-assign" :   "^3.0.0",
-                                "keymirror"     :   "^0.1.1"
+                                "keymirror"     :   "^0.1.1",
+                                "xml2js"        :   "^0.4.11",
+                                "q"             :   "^1.4.1"
                             },
     "devDependencies"   :  {
                                 "browserify"    :   "^11.0.1",
@@ -35,7 +37,7 @@
                                 "start"         :   "npm run bootstrap & npm run watch",
                                 "watch"         :   "npm run watch-js & npm run watch-css",
 
-                                "watchit"       :   "watchify -vdo dist/bundle.js .",
+                                "watchify"      :   "watchify -vdo dist/bundle.js .",
 
                                 "watch-js"      :   "nodemon --watch src --ext js,jsx --exec \"npm run build-js-d\"",
                                 "build-js-d"    :   "browserify -vdo dist/bundle.js .",
